tests/src/frontend/typechecking/exhaustiveness/invalid/exhaustive_pattern4.sk
base class MyBase
class Foo() extends MyBase

fun foo(x: MyBase): void {
  x match {
  | _y -> void
  | _z -> void
  }
}

fun main(): void {
  print_string("OK")
}
